produce boundary of fractal spectre and mystic

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -61,6 +61,8 @@ spectretripods: spectretripod.png spectretripod_o.png spectretripod_z.png spectr
 
 spectreworms: $(spectreworms0) $(spectrehydras)
 
+spectrefractals: spectrefractal.png mysticfractal.png
+
 #
 #
 #
@@ -299,6 +301,13 @@ spectretripodw_o.png: spectreworm.pov
 
 spectretripodw_z.png: spectreworm.pov
 	povray +a $(povoptspng) $< Declare=depth=6 Declare=zoomout=2 Declare=tipsigw=333333 Declare=focussig=040404 Declare=tipsigw2=633333 Declare=tailsigw2=0 +O$@
+
+spectrefractal.png: spectrebd.pov spectresubdivision.inc
+	povray +a $(povoptspng) $< Declare=depth=7 Declare=bdthick=6 Declare=zoomout=6.7 Declare=panup=1 Declare=panright=0.5 Declare=ptsize=100 +O$@
+
+mysticfractal.png: spectrebd.pov spectresubdivision.inc
+	povray +a $(povoptspng) $< Declare=depth=7 Declare=bdthick=6 Declare=zoomout=6.7 Declare=panup=1 Declare=panright=0.5 Declare=ptsize=100 Declare=SPid=0 +O$@
+
 
 #
 #
