Create images for activities

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -185,6 +185,17 @@ hath8fractalsub.png: hatbd.pov subdivision.inc
 	povray +a $(povoptspng) $< Declare=depth=6 Declare=bdthick=6 Declare=zoomout=6.2 Declare=panup=0 Declare=panright=-2 Declare=ptsize=40 Declare=draw4points=1 Declare=subdivide=1 Declare=draw4points=1 Declare=subpoints=1 Declare=letters=1 +O$@
 
 #
+# notte dei ricercatori
+#
+
+notte0.png: notte.pov
+	povray $(povoptspng) $< Declare=activity=0 +O$@
+
+notte0gray.png: notte.pov
+	povray $(povoptspng) $< Declare=activity=0 Declare=gray=1 +O$@
+
+
+#
 # SPECTRE SIGNATURES
 #
 
