Make wicked witch work with hexagons

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -560,7 +560,7 @@ mp4lista=five_deflations five_deflations_ws yellow_brick_road5B yellow_brick_roa
 mp4listb=yellow_brick_road_path0 yellow_brick_road_path1 yellow_brick_road_path2 yellow_brick_road_path3
 mp4listc=yellow_brick_road_emerald yellow_brick_road_witch
 mp4listd=spectre_deflations spectre_deflations_ws spectre_desert_walk5 spectre_desert_walk6
-mp4liste=hex_brick_road_emerald
+mp4liste=hex_brick_road_emerald hex_brick_road_witch
 
 mp4list = $(mp4lista) $(mp4listb) $(mp4listc) $(mp4listd) $(mp4liste)
 
@@ -676,5 +676,10 @@ $(mp4concatlist:%=%.mp4): %.mp4: %.list yellow_brick_road_path0.mp4 yellow_brick
 frames/hex_brick_road_emerald/DONE: frames/%/DONE: hex_brick_road.pov
 	povray $< $(povoptsani) Declare=depth=6 Declare=emeraldpath=1 +kf130 +kff3250 +Oframes/$*/frame
 	for i in `seq 3251 3275`; do cp frames/$*/frame3250.png frames/$*/frame$${i}.png; done
+	touch $@
+
+frames/hex_brick_road_witch/DONE: frames/%/DONE: hex_brick_road.pov
+	povray $< $(povoptsani) Declare=depth=6 Declare=witchpath=1 +kf148 +kff3700 +Oframes/$*/frame
+	for i in `seq 3701 3725`; do cp frames/$*/frame3700.png frames/$*/frame$${i}.png; done
 	touch $@
 
